增加我的页面布局

--- a/common_ec/src/main/res/layout/delegate_mine.xml
+++ b/common_ec/src/main/res/layout/delegate_mine.xml
@@ -1,13 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.example.latte.ui.widget.HeadLayout
         android:id="@+id/head_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="64dp"
+        android:gravity="center_vertical"></com.example.latte.ui.widget.HeadLayout>
 
-    </com.example.latte.ui.widget.HeadLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/head_layout"
+        android:layout_margin="15dp"
+        android:background="#ffffff"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/head_portrait"
+            android:layout_width="match_parent"
+            android:layout_height="80dp">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_checked" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="32dp"
+                android:text="科诺夫"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <com.example.latte.ui.widget.UserTextLineView
+            android:id="@+id/photo_album"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:hasArrow="true"
+            app:iconDrawable="@mipmap/mine_xiangce"
+            app:text="壹家相册"
+            app:textColor="@color/light_black"></com.example.latte.ui.widget.UserTextLineView>
+
+        <com.example.latte.ui.widget.UserTextLineView
+            android:id="@+id/sayings"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:hasArrow="true"
+            app:iconDrawable="@mipmap/mine_shenghuo"
+            app:text="生活语录"
+            app:textColor="@color/light_black"></com.example.latte.ui.widget.UserTextLineView>
+
+        <com.example.latte.ui.widget.UserTextLineView
+            android:id="@+id/About_us"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:hasArrow="true"
+            app:iconDrawable="@mipmap/mine_guanyuwomen"
+            app:text="关于我们"
+            app:textColor="@color/light_black"></com.example.latte.ui.widget.UserTextLineView>
+
+        <com.example.latte.ui.widget.UserTextLineView
+            android:id="@+id/help"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:hasArrow="true"
+            app:iconDrawable="@mipmap/mine_bangzhu"
+            app:text="帮助"
+            app:textColor="@color/light_black"></com.example.latte.ui.widget.UserTextLineView>
+
+        <com.example.latte.ui.widget.UserTextLineView
+            android:id="@+id/set_up"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:hasArrow="true"
+            app:iconDrawable="@mipmap/mine_shezhi"
+            app:text="设置"
+            app:textColor="@color/light_black"></com.example.latte.ui.widget.UserTextLineView>
+    </LinearLayout>
+
 
 </RelativeLayout>
