--- a/common_ui/src/main/res/layout/head_right_text.xml
+++ b/common_ui/src/main/res/layout/head_right_text.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/head_right_text"
     android:text="发送"
     android:textSize="16sp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="MissingDefaultResource">
 
 </TextView>
