--- a/common_ui/src/main/res/layout/headlayout.xml
+++ b/common_ui/src/main/res/layout/headlayout.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/head_layout"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:background="#f2f2f2"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+       >
 
         <ViewStub
             android:id="@+id/head_return"
@@ -27,10 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true"
-            android:layout="@layout/head_name"
-            android:text="名字"
-            android:textColor="#000"
-            android:textSize="20sp" />
+            android:layout_centerVertical="true"
+            android:layout="@layout/head_name" />
 
         <ViewStub
             android:id="@+id/head_right_text"
@@ -41,9 +37,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="12dp"
             android:layout="@layout/head_right_text"
-            android:text="发送"
-            android:textSize="16sp"
-            android:visibility="gone" />
+        />
 
         <ViewStub
             android:id="@+id/head_right_image"
