--- a/common_ec/src/main/res/values/style.xml
+++ b/common_ec/src/main/res/values/style.xml
@@ -202,4 +202,10 @@
     </style>
 
     <!--PictureSelecttor  END-->
+    
+    <!--EditText样式-->
+    <style name="MyEditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">#EFEFEF</item>
+        <item name="colorControlActivated">#FDBA63</item>
+    </style>
 </resources>
