--- a/common_ui/src/main/res/layout/headlayout.xml
+++ b/common_ui/src/main/res/layout/headlayout.xml
@@ -13,10 +13,11 @@
 
         <ViewStub
             android:id="@+id/head_return"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="9dp"
+            android:layout_height="17dp"
             android:layout_marginLeft="12dp"
             android:padding="2dp"
+            android:layout_centerVertical="true"
             android:layout="@layout/head_left" />
 
         <ViewStub
