更改个人信息，完成设置，完成我的页面可实现功能

--- a/common_ec/src/main/res/layout/delegate_setpassword.xml
+++ b/common_ec/src/main/res/layout/delegate_setpassword.xml
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="31dp"
-            android:text="密码必须是8-16位的数字和字符(不能是纯数字)"
+            android:text="密码必须是8-16位的数字和字母(不能是纯数字)"
             android:textColor="#C2C2C2"
             />
 
