--- a/common_ec/src/main/res/layout/delegate_mine.xml
+++ b/common_ec/src/main/res/layout/delegate_mine.xml
@@ -29,8 +29,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/ic_checked" />
+                android:layout_marginTop="20dp" />
 
             <TextView
                 android:id="@+id/user_nickname"
@@ -39,6 +38,7 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="32dp"
                 android:text="科诺夫"
+                android:textColor="@color/light_black"
                 android:textSize="15sp" />
         </LinearLayout>
 
