--- a/common_ec/src/main/res/values/style.xml
+++ b/common_ec/src/main/res/values/style.xml
@@ -2,12 +2,11 @@
 <resources>
 
 
-
-
     <style name="anim_panel_up_from_bottom" parent="@android:style/Animation">
         <item name="android:windowEnterAnimation">@anim/push_bottom_in</item>
         <item name="android:windowExitAnimation">@anim/push_bottom_out</item>
     </style>
+
     <style name="ui_login_textinputLayout" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorControlNormal">@color/app_text_hint</item>
         <item name="colorControlActivated">@color/app_text_orange</item>
@@ -202,10 +201,23 @@
     </style>
 
     <!--PictureSelecttor  END-->
-    
+
     <!--EditText样式-->
     <style name="MyEditText" parent="Theme.AppCompat.Light">
         <item name="colorControlNormal">#EFEFEF</item>
         <item name="colorControlActivated">#FDBA63</item>
     </style>
+
+    <!--SwitchCompat 样式 -->
+    <style name="Theme.MyTheme" parent="Theme.AppCompat.Light">
+        <!-- colorPrimary is used for the default action bar background            用于默认操作栏的背景-->
+        <item name="colorPrimary">#Dfffff</item>
+        <!-- colorPrimaryDark is used for the status bar 主要用于状态栏-->
+        <item name="colorPrimaryDark">#D2D6D9</item>
+        <!-- colorAccent is used as the default value for colorControlActivated,
+            which is used to tint widgets 用于色彩控制器的默认值，用来给小部件着色-->
+        <item name="colorAccent">#FDBA63</item>
+        <!-- You can also set colorControlNormal, colorControlActivated             colorControlHighlight, and colorSwitchThumbNormal. -->
+    </style>
+
 </resources>
