--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExampleActivity">
+    tools:context="com.bokang.yijia.ExampleActivity">
     <com.joanzapata.iconify.widget.IconTextView
         android:id="@+id/icon_test"
         android:layout_width="wrap_content"
