--- a/common_ec/src/main/res/layout/delegate_index_yijia.xml
+++ b/common_ec/src/main/res/layout/delegate_index_yijia.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:text="和爸妈一起记录家庭岁月吧！"
+            android:text="和亲友一起记录岁月吧！"
             android:textColor="@color/app_text_dark"
             android:textSize="12sp"
 
