--- a/common_ec/src/main/res/layout/delegate_message.xml
+++ b/common_ec/src/main/res/layout/delegate_message.xml
@@ -42,23 +42,23 @@
             </RelativeLayout>
 
 
-
         </RelativeLayout>
 
     </android.support.v7.widget.Toolbar>
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
-        android:layout_marginTop="13dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:background="@drawable/radius5_background_white"
         android:layout_width="match_parent"
-        android:layout_height="37dp"/>
+        android:layout_height="37dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="15dp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
 
 </android.support.v7.widget.LinearLayoutCompat>
