--- a/common_ui/src/main/res/layout/head_right_image.xml
+++ b/common_ui/src/main/res/layout/head_right_image.xml
@@ -2,7 +2,7 @@
 <ImageView
     android:id="@+id/head_right_image"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="24dp"
+    android:layout_height="24dp">
 
 </ImageView>
