--- a/common_ec/src/main/res/layout/delegate_setpassword.xml
+++ b/common_ec/src/main/res/layout/delegate_setpassword.xml
@@ -26,18 +26,18 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="30dp"
-            android:theme="@style/MyEditText"
             android:drawableLeft="@mipmap/yuanmima"
             android:drawablePadding="30dp"
             android:hint="请输入您的原密码"
-            android:textColorHint="#C2C2C2"
+            android:inputType="textPassword"
             android:maxLength="11"
             android:maxLines="1"
-            android:inputType="textPassword"
             android:paddingTop="5dp"
             android:paddingBottom="15dp"
             android:textColor="@color/light_black"
-            android:textSize="15dp" />
+            android:textColorHint="#C2C2C2"
+            android:textSize="15dp"
+            android:theme="@style/MyEditText" />
 
 
         <EditText
@@ -47,26 +47,25 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="30dp"
-            android:theme="@style/MyEditText"
-            android:inputType="textPassword"
             android:drawableLeft="@mipmap/new_pwd"
             android:drawablePadding="30dp"
             android:hint="请输入您的新密码"
+            android:inputType="textPassword"
             android:maxLength="11"
             android:maxLines="1"
             android:paddingTop="5dp"
-            android:textColorHint="#C2C2C2"
             android:paddingBottom="15dp"
             android:textColor="@color/light_black"
-            android:textSize="15dp" />
+            android:textColorHint="#C2C2C2"
+            android:textSize="15dp"
+            android:theme="@style/MyEditText" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="31dp"
             android:text="密码必须是8-16位的数字和字母(不能是纯数字)"
-            android:textColor="#C2C2C2"
-            />
+            android:textColor="#C2C2C2" />
 
         <EditText
             android:id="@+id/confirm_pwd"
@@ -75,7 +74,6 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="30dp"
-            android:theme="@style/MyEditText"
             android:drawableLeft="@mipmap/confirm_pwd"
             android:drawablePadding="30dp"
             android:hint="请确认您的密码"
@@ -84,9 +82,10 @@
             android:maxLines="1"
             android:paddingTop="5dp"
             android:paddingBottom="15dp"
-            android:textColorHint="#C2C2C2"
             android:textColor="@color/light_black"
-            android:textSize="15dp" />
+            android:textColorHint="#C2C2C2"
+            android:textSize="15dp"
+            android:theme="@style/MyEditText" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_sign_in"
