科大听写、basepopu、ui调整

--- a/common_core/src/main/res/values/colors.xml
+++ b/common_core/src/main/res/values/colors.xml
@@ -25,5 +25,5 @@
     <color name="main_background_remind_black">#40000000</color>
     <color name="main_background_remind_gray">#80727272</color>
 
-
+    <color name="main_c8">#C8C8C8</color>
 </resources>
