--- a/common_ec/src/main/res/layout/delegate_sign_only_yijia.xml
+++ b/common_ec/src/main/res/layout/delegate_sign_only_yijia.xml
@@ -5,197 +5,183 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="64dp"></android.support.v7.widget.Toolbar>
 
-        <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
+
+    <android.support.v7.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="11dp"
+        android:gravity="center"
+        android:text="登录"
+        android:textColor="@color/main_text_orange"
+        android:textSize="@dimen/first_title_18" />
+
+    <!--电话-->
+    <android.support.v7.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="40dp">
+
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="14dp"
+            android:layout_height="21dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="3dp"
+            android:scaleType="fitXY"
+            android:src="@mipmap/icon_login_phone" />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            android:orientation="vertical">
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="27dp"
+            android:layout_marginEnd="12dp"
+            android:text="+86"
+            android:textColor="@color/main_text_black_dark"
+            android:textSize="@dimen/second_title_14" />
 
 
-            <android.support.v7.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="75dp"
-                android:gravity="center"
-                android:text="登录"
-                android:textColor="@color/main_text_orange"
-                android:textSize="@dimen/first_title_18" />
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:theme="@style/hintAppearance">
 
-            <!--电话-->
-            <android.support.v7.widget.LinearLayoutCompat
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edit_logup_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="44dp"
-                android:layout_marginTop="58dp"
-                android:layout_marginEnd="40dp">
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:layout_width="14dp"
-                    android:layout_height="21dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="3dp"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/icon_login_phone" />
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="27dp"
-                    android:layout_marginEnd="12dp"
-                    android:text="+86"
-                    android:textColor="@color/main_text_black_dark"
-                    android:textSize="@dimen/second_title_14" />
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:hint="请输入您的手机号码"
+                android:inputType="textPhonetic"
+                android:textColorHint="@color/main_text_gary"
+                android:textSize="@dimen/second_title_14"
+                tools:ignore="HardcodedText" />
+        </android.support.design.widget.TextInputLayout>
+    </android.support.v7.widget.LinearLayoutCompat>
 
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="46dp"
-                    android:layout_marginStart="10dp"
-                    android:theme="@style/hintAppearance">
+    <!--密码-->
+    <android.support.v7.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="40dp">
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/edit_logup_phone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-
-                        android:gravity="center_vertical"
-                        android:hint="请输入您的手机号码"
-                        android:inputType="textPhonetic"
-                        android:textColorHint="@color/main_text_gary"
-                        android:textSize="@dimen/second_title_14"
-                        tools:ignore="HardcodedText" />
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="16dp"
+            android:layout_height="18dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="2dp"
+            android:scaleType="fitXY"
+            android:src="@mipmap/icon_login_password" />
 
 
-                </android.support.design.widget.TextInputLayout>
-            </android.support.v7.widget.LinearLayoutCompat>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="25dp"
+            android:layout_weight="1"
+            android:theme="@style/hintAppearance">
 
-
-            <!--密码-->
-            <android.support.v7.widget.LinearLayoutCompat
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edit_logup_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="41dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="40dp">
+                android:layout_gravity="center_vertical"
 
-                <android.support.v7.widget.AppCompatImageView
-                    android:layout_width="16dp"
-                    android:layout_height="18dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="2dp"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/icon_login_password" />
-
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="0dp"
-                    android:layout_height="46dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="25dp"
-                    android:layout_weight="1"
-                    android:theme="@style/hintAppearance">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/edit_logup_note"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-
-                        android:gravity="center_vertical"
-                        android:hint="请输入您的验证码"
-                        android:inputType="textPassword"
-                        android:textColorHint="@color/main_text_gary"
-                        android:textSize="@dimen/third_title_13"
-                        tools:ignore="HardcodedText" />
-
-
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/tv_getnote"
-                    android:layout_width="81dp"
-                    android:layout_height="31dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@mipmap/buttom_logup_getnote_orange"
-                    android:gravity="center"
-                    android:text="获取验证码"
-                    android:textColor="@color/main_text_orange"
-                    android:textSize="@dimen/forth_title_12" />
-
-
-            </android.support.v7.widget.LinearLayoutCompat>
-
-
-            <android.support.v7.widget.AppCompatButton
-
-                android:id="@+id/btn_sign_in"
-                android:layout_width="match_parent"
-                android:layout_height="41dp"
-                android:layout_marginStart="41dp"
-                android:layout_marginTop="69dp"
-                android:layout_marginEnd="40dp"
-                android:background="@mipmap/buttom_login_gray"
-                android:gravity="center"
-                android:padding="12sp"
-                android:text="登录"
-                android:textColor="@color/app_text_gray"
+                android:gravity="center_vertical"
+                android:hint="请输入您的验证码"
+                android:inputType="textPassword"
+                android:textColorHint="@color/main_text_gary"
+                android:textSize="@dimen/third_title_13"
                 tools:ignore="HardcodedText" />
 
-            <TextView
-                android:layout_marginTop="142dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center"
-                android:text="第三方登录"
-                android:textColor="@color/app_text_dark"
-                android:textSize="@dimen/forth_title_12" />
 
-            <android.support.v7.widget.LinearLayoutCompat
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="94dp">
+        </android.support.design.widget.TextInputLayout>
 
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/im_login_qq"
-                    android:layout_width="44dp"
-                    android:layout_height="44dp"
-                    android:layout_gravity="center_vertical"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/icon_login_qq" />
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/im_login_weibo"
-                    android:layout_width="44dp"
-                    android:layout_height="44dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="54dp"
-                    android:layout_marginEnd="54dp"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/icon_login_weibo" />
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/im_login_wechart"
-                    android:layout_width="44dp"
-                    android:layout_height="44dp"
-                    android:layout_gravity="center_vertical"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/icon_login_wechart" />
-
-            </android.support.v7.widget.LinearLayoutCompat>
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_getnote"
+            android:layout_width="81dp"
+            android:layout_height="31dp"
+            android:layout_gravity="center_vertical"
+            android:background="@mipmap/buttom_logup_getnote_orange"
+            android:gravity="center"
+            android:text="获取验证码"
+            android:textColor="@color/main_text_orange"
+            android:textSize="@dimen/forth_title_12" />
 
 
-        </android.support.v7.widget.LinearLayoutCompat>
-    </android.support.v4.widget.NestedScrollView>
+    </android.support.v7.widget.LinearLayoutCompat>
+
+
+    <android.support.v7.widget.AppCompatButton
+
+        android:id="@+id/btn_sign_in"
+        android:layout_width="match_parent"
+        android:layout_height="41dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="69dp"
+        android:layout_marginEnd="40dp"
+        android:background="@mipmap/buttom_login_gray"
+        android:gravity="center"
+        android:padding="12sp"
+        android:text="登录"
+        android:textColor="@color/app_text_gray"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="142dp"
+        android:gravity="center"
+        android:text="第三方登录"
+        android:textColor="@color/app_text_dark"
+        android:textSize="@dimen/forth_title_12" />
+
+    <android.support.v7.widget.LinearLayoutCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp">
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/im_login_qq"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center_vertical"
+            android:scaleType="fitXY"
+            android:src="@mipmap/icon_login_qq" />
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/im_login_weibo"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="54dp"
+            android:layout_marginEnd="54dp"
+            android:scaleType="fitXY"
+            android:src="@mipmap/icon_login_weibo" />
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/im_login_wechart"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center_vertical"
+            android:scaleType="fitXY"
+            android:src="@mipmap/icon_login_wechart" />
+
+    </android.support.v7.widget.LinearLayoutCompat>
+
 
 </android.support.v7.widget.LinearLayoutCompat>
