--- a/common_ec/src/main/res/layout/include_edit_top.xml
+++ b/common_ec/src/main/res/layout/include_edit_top.xml
@@ -3,34 +3,39 @@
     android:layout_width="match_parent"
     android:layout_height="64dp">
 
-    <android.support.v7.widget.AppCompatTextView
+    <RelativeLayout
         android:id="@+id/tv_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="11dp"
-        android:text="取消"
-        android:textColor="@color/app_text_orange"
-        android:textSize="15sp" />
+        android:layout_width="44dp"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="11dp"
+            android:background="@mipmap/back" />
+    </RelativeLayout>
+
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="9dp"
         android:text="编辑"
-        android:textColor="@color/app_text_orange"
-        android:textSize="18sp" />
+        android:textColor="@color/main_text_black_dark"
+        android:textSize="@dimen/second_title_18" />
+
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="11dp"
         android:text="保存"
-        android:layout_alignParentEnd="true"
-        android:textColor="@color/app_text_orange"
+        android:textColor="@color/main_text_black_dark"
         android:textSize="15sp" />
 </RelativeLayout>
