--- a/common_ui/src/main/res/layout/basepopu_index.xml
+++ b/common_ui/src/main/res/layout/basepopu_index.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="115dp"
+    android:layout_width="124dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@color/white"
@@ -9,7 +9,7 @@
     <android.support.v7.widget.LinearLayoutCompat
         android:id="@+id/ll_camera"
         android:layout_width="match_parent"
-        android:layout_height="43dp">
+        android:layout_height="53dp">
 
         <View
             android:layout_width="0dp"
@@ -17,8 +17,8 @@
             android:layout_weight="1" />
 
         <android.support.v7.widget.AppCompatTextView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_gravity="center"
             android:background="@mipmap/popu_index_camera" />
 
@@ -27,9 +27,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="12dp"
             android:gravity="center"
-            android:padding="16dp"
+            android:textSize="@dimen/first_title_20"
+            android:textColor="@color/main_text_black_dark"
             android:text="相册" />
 
         <View
@@ -41,7 +42,7 @@
     <android.support.v7.widget.LinearLayoutCompat
         android:id="@+id/ll_vodeo"
         android:layout_width="match_parent"
-        android:layout_height="43dp">
+        android:layout_height="53dp">
 
         <View
             android:layout_width="0dp"
@@ -49,8 +50,8 @@
             android:layout_weight="1" />
 
         <android.support.v7.widget.AppCompatTextView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_gravity="center"
             android:background="@mipmap/popu_index_video" />
 
@@ -58,9 +59,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="12dp"
             android:gravity="center"
-            android:padding="16dp"
+            android:textSize="@dimen/first_title_20"
+            android:textColor="@color/main_text_black_dark"
             android:text="微拍" />
 
         <View
@@ -72,7 +74,7 @@
     <android.support.v7.widget.LinearLayoutCompat
         android:id="@+id/ll_letter"
         android:layout_width="match_parent"
-        android:layout_height="43dp">
+        android:layout_height="53dp">
 
         <View
             android:layout_width="0dp"
@@ -80,8 +82,8 @@
             android:layout_weight="1" />
 
         <android.support.v7.widget.AppCompatTextView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_gravity="center"
             android:background="@mipmap/popu_index_latter" />
 
@@ -89,9 +91,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="12dp"
             android:gravity="center"
-            android:padding="16dp"
+            android:textSize="@dimen/first_title_20"
+            android:textColor="@color/main_text_black_dark"
             android:text="家书" />
 
         <View
