1.朋友列表、朋友圈相关接口修改 2.选择好友功能（80%）

--- a/common_ui/src/main/res/values/colors.xml
+++ b/common_ui/src/main/res/values/colors.xml
@@ -35,5 +35,6 @@
     <color name="blue_top">#005ec9</color>
     <color name="dialog_btn_blue_02">#0374fe</color>
 
-
+    <drawable name="charIndexColor">#33000000</drawable>
+    <color name="charIndexColor">#33000000</color>
 </resources>
