--- a/common_ec/src/main/res/layout/delegate_edit_letter.xml
+++ b/common_ec/src/main/res/layout/delegate_edit_letter.xml
@@ -66,8 +66,9 @@
 
     </android.support.v7.widget.LinearLayoutCompat>
 
-    <!--<android.support.v7.widget.AppCompatTextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/bt_say"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginStart="15dp"
@@ -77,7 +78,7 @@
         android:textColor="@color/main_text_orange"
         android:drawableStart="@mipmap/index_edit_say"
         android:drawablePadding="0dp"
-        android:text="语音" />-->
+        android:text="语音" />
 
 
 </android.support.v7.widget.LinearLayoutCompat>
