--- a/common_ec/src/main/res/layout/include_edit_top.xml
+++ b/common_ec/src/main/res/layout/include_edit_top.xml
@@ -18,6 +18,7 @@
     </RelativeLayout>
 
     <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
