--- a/common_ec/src/main/res/values/colors.xml
+++ b/common_ec/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="app_text_hint">#BFBFBF</color>
 
     <color name="color_f6">#f6f6f6</color>
+
+    <color name="charIndexColor">#33000000</color>
 </resources>
