1..选择好友功能

--- a/common_core/src/main/res/values/colors.xml
+++ b/common_core/src/main/res/values/colors.xml
@@ -9,8 +9,8 @@
 
     <color name="main_text_black_dark">#333333</color>
     <color name="main_text_orange">#FDBA63</color>
-    <color name="main_text_gary_dark">#626262</color>
-    <color name="main_text_gary">#999999</color>
+    <color name="main_text_gary_dark_62">#626262</color>
+    <color name="main_text_gary_99">#999999</color>
     <color name="main_text_white">#ffffff</color>
 
     <color name="main_background_f5">#F5F5F5</color>
