--- a/common_ec/src/main/res/layout/delegate_index_edit_letter_choosefriend.xml
+++ b/common_ec/src/main/res/layout/delegate_index_edit_letter_choosefriend.xml
@@ -20,7 +20,7 @@
         android:textSize="@dimen/third_title_16"
         android:drawableLeft="@mipmap/index_edit_choosefriend_searsh"
         android:drawablePadding="10dp"
-        android:textColor="@color/main_text_gary"
+        android:textColor="@color/main_text_gary_99"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -34,14 +34,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <you.xiaochen.search.CharIndexView
+        <com.example.latte.ui.contactlist.search.CharIndexView
             android:id="@+id/iv_main"
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             app:indexTextSize="13sp"
-            app:charTextColor="#000000"
-            app:indexTextColor="#ff00ff"
+            app:charTextColor="@color/main_text_gary_99"
+            app:indexTextColor="@color/main_text_white"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"/>
 
