--- a/common_ui/src/main/res/layout/item_header.xml
+++ b/common_ui/src/main/res/layout/item_header.xml
@@ -6,4 +6,4 @@
     android:singleLine="true"
     android:paddingLeft="12dp"
     android:gravity="center_vertical"
-    android:background="#ff00ff"/>
+    android:background="@color/white"/>
