--- a/common_ec/src/main/res/layout/delegate_index_yijia.xml
+++ b/common_ec/src/main/res/layout/delegate_index_yijia.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
+        android:visibility="gone"
         android:id="@+id/rv_friends"
         android:background="@android:color/white"
         android:layout_width="match_parent"
